*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget.htm
@@ -86,7 +86,7 @@ The following snippet is from <b>WorkbenchActionBuilder</b>.</p>
 <pre><font color="#4444CC"> propertiesAction = createGlobalAction(IWorkbenchActionConstants.PROPERTIES, &quot;file&quot;, false); </font></pre>
 
 
-<p>The createGlobalAction method shows us exactly how to make a <b><a href="../reference/api/org/eclipse/ui/actions/RetargetAction.html">RetargetAction</a></b>.</p>
+<p>The <b> createGlobalAction</b> method shows us exactly how to make a <b><a href="../reference/api/org/eclipse/ui/actions/RetargetAction.html">RetargetAction</a></b>.</p>
 
 
 <pre><font color="#4444CC">private RetargetAction createGlobalAction(String id, String actionDefPrefix, boolean labelRetarget) {
