--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget_setting.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget_setting.htm
@@ -43,7 +43,8 @@ action.</p>
 <p>That's all that is needed.&nbsp; Your action will be run when the user
 chooses the action from the workbench menu bar or tool bar and your view or
 editor is active.&nbsp; The workbench handles the details of ensuring that the
-retargeted action is always associated with the currently active view or editor.</p>
+retargeted action is always associated with the currently active view or editor.
+</p>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
