--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_singleclick.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_singleclick.htm
@@ -52,16 +52,16 @@ such as expanding the items in a tree on double-click.</p>
 <h3>Single click in SWT controls</h3>
 
 
-<p>JFace provides a utility class, <a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html">OpenStrategy</a>,
+<p>JFace provides a utility class, <a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html"><b>OpenStrategy</b></a>,
 to handle the logistics of single and double click at the SWT control
-level.&nbsp; The <a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html">OpenStrategy</a>
+level.&nbsp; The <a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html"><b>OpenStrategy</b></a>
 is configured by the workbench <b>Preferences</b> dialog so that it honors the
 current workbench open preference. In fact, the JFace viewers use this class to
 implement the open listener.&nbsp; </p>
 
 
-<p>You must create an <a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html">OpenStrategy</a>
-and associate it with your SWT control.&nbsp; The <a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html">OpenStrategy</a>
+<p>You must create an <a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html"><b>OpenStrategy</b></a>
+and associate it with your SWT control.&nbsp; The <a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html"><b>OpenStrategy</b></a>
 will hook the appropriate events and interpret them based on the user
 preferences.&nbsp; Your job is to add an open listener to the strategy that
 implements the code for open.&nbsp; In this way, you are shielded from knowledge
@@ -76,11 +76,15 @@ openHandler.addOpenListener(new IOpenEventListener() {
 	}
 }</font></font></pre>
 <p><font size="2">The other workbench preferences for open (select on hover,
-open using arrow keys) are also handled by </font><a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html">OpenStrategy</a>.&nbsp;
+open using arrow keys) are also handled by </font><a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html"><b>OpenStrategy</b></a>.&nbsp;
 This means that the &quot;right thing&quot; will happen if you use JFace viewers
-or the <a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html">OpenStrategy</a>
+or the <a href="../reference/api/org/eclipse/jface/util/OpenStrategy.html"><b>OpenStrategy</b></a>
 class to implement open behavior.</p>
-<pre>&nbsp;</pre>
+<h3>Activating editors on open</h3>
+<p>When handling an open event, you should use <b>OpenStrategy.activateOnOpen() </b>to
+determine whether an opened editor should be activated by default.&nbsp;
+Activating an editor switches the focus from the view to the editor, which can
+be particularly confusing and undesirable in single click mode. </p>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
