*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings.htm
@@ -13,7 +13,8 @@ Workbench key bindings
 <BODY BGCOLOR="#ffffff">
 <h2>Workbench key bindings</h2>
 <p>The workbench defines many keyboard accelerators for invoking common actions
-with the keyboard.&nbsp; When your plug-in defines a new action using the <b>actionSets</b>, <b>viewActions</b>, or <b>editorActions</b> extension points, an <b>accelerator</b> 
+with the keyboard.&nbsp; When your plug-in defines a new action using the <b>actionSets</b>
+or <b>editorActions</b> extension points, an <b>accelerator</b> 
 attribute can be specified with any action.&nbsp; This is one way to establish
 the key combination that will invoke the action.&nbsp; However, allowing each
 plug-in to define their own accelerator keys for actions introduces several
