--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_accelSet.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_accelSet.htm
@@ -60,7 +60,12 @@ hypothetical action definition:</p>
 	   &lt;/actionSet&gt;
 &lt;/extension&gt;</pre>
 </font><p>When our example action set is active, our save action will be invoked
-when the user chooses <b>Ctrl+X</b> or <b>Ctrl+S</b>. Likewise, when the
+when the user chooses <b>Ctrl+X</b>  followed by <b>Ctrl+S</b>. (The use of ||,
+such as <b>&quot;Ctrl+Shift+F4||Ctrl+X Ctrl+C&quot; </b>indicates that either
+key combination can be used to activate the action.)</p>
+
+
+<p> Likewise, when the
 workbench <b>SaveAction</b> is active, the same key combinations will invoke it
 instead, since the workbench used the same action definition id for the <b>SaveAction</b>.</p>
 
