*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_accelSet.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_accelSet.htm
@@ -18,7 +18,7 @@ Accelerator sets
 invoke the action is called an <b>accelerator set</b>.&nbsp; Plug-ins can
 contribute accelerator sets using the <b><a href="../reference/extension-points/org_eclipse_ui_acceleratorSets.html">org.eclipse.ui.acceleratorSets</a></b>
 extension point.&nbsp; The workbench defines an accelerator set that provides
-emacs-like key bindings:</p>
+emacs-like key bindings:&nbsp;</p>
 
 
 <pre><font color="#4444CC">&lt;extension
