*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_actionDef.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_actionDef.htm
@@ -93,7 +93,7 @@ they are easily referenced in code.&nbsp; </p>
 
 
 <p>What if you don't instantiate your action in code?&nbsp; If you define an
-action in an action set or editor action, then you typically do not need to
+action in an action set, then you typically do not need to
 instantiate it yourself.&nbsp; The workbench will do it for you when the user
 invokes your action from a menu or the keyboard.&nbsp; In this case, you can
 associate your action with an action definition in the XML markup.&nbsp; The
@@ -120,8 +120,8 @@ definition id for the action.</p>
 
 
 <p>Using either technique, associating your action with an action definition
-assures you that any key bindings that get defined for the action definition <b>org.eclipse.ui.file.save
-</b>will invoke your action when appropriate.&nbsp; </p>
+causes any key bindings that get defined for the action definition <b>org.eclipse.ui.file.save
+</b>to invoke your action when appropriate.&nbsp; </p>
 
 
 <p>Now let's look at how these key bindings get defined. </p>
