Incorporate info from ref-54.htm into tasks-114.htm and deleted ref-54.htm

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-113.htm
@@ -125,7 +125,7 @@ unprocessed.
 
 <p CLASS="Intro"><b>Warning:</b> The behavior of the <b>Override and Update</b> command
 described above only applies to the incoming mode of the Synchronize view. In the 
-<b>incoming/outgoing mode</b> of the view, the behavior for incoming changes is the same but 
+<b>incoming/outgoing mode</b> of the view, the behavior for incoming changes and conflicts is the same but 
 the command will revert outgoing changes to whatever the repository contents are. 
 Exercise great caution if using this command in incoming/outgoing mode.
 </p>
