--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
@@ -10,9 +10,36 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Committing</H1>
-<P CLASS="Intro"> You can commit workbench resources to the repository so that 
+<P CLASS="Intro"> You can commit workbench resources that you have modified to the repository so that 
   other team members can see your work. Only those changes committed on that branch 
-  will be visible to others working on that branch.  To commit changes: 
+  will be visible to others working on that branch. The commit command can be issued from two 
+  places: the <b>Team &gt; Commit</b> 
+  menu, or the <b>Synchronize </b>view.
+</p>
+<P CLASS="Intro">To commit changes using <b>Team &gt; Commit</b>:
+</p>
+<ol>
+  <li> 
+    <p CLASS="Intro">In the Navigator view, select the resources that you want 
+      to commit.
+  </li>
+  <li> 
+    <p CLASS="Intro">Right-click on the resources and chose <b>Team &gt; Commit</b> from
+    the popup menu.
+  </li>
+  <li> 
+    <p CLASS="Intro"> In the <i>Commit Comment</i> dialog box, provide 
+      a comment for your changes (for example, <samp>Fixed the spelling mistakes</samp>). 
+  </li>
+</ol>
+
+<P CLASS="Intro">If there are conflicting changes on any files that are committed in the above
+fashion, the operation will fail. If this occurs, you must either perform an update or
+use the Synchronize view to resolve the conflicts. It is considered a more ideal workflow
+to always update before committing anyway in order to ensure that you have the latest
+state of the repository before committing more changes.
+</p>
+<P CLASS="Intro">To commit changes in the Synchronize view: 
 <ol>
   <li> 
     <p CLASS="Intro">In the Navigator view, select the resources that you want 
@@ -24,7 +51,7 @@ Committing</H1>
   </li>
   <li> 
     <p CLASS="Intro">On the toolbar of the Synchronize 
-      view, select the <b> outgoing mode</b> button to show any modified workbench 
+      view, select the <b>outgoing mode</b> button to show any modified workbench 
       resources (outgoing changes) that you may have.
   </li>
   <li> 
@@ -38,7 +65,7 @@ Committing</H1>
   <li> 
     <p CLASS="Intro"> In the Structure Compare pane, right-click the top of the 
       hierarchy that you want to commit, and select <b>Commit</b> from the pop-up 
-      menu. 
+      menu.
   </li>
   <li> 
     <p CLASS="Intro"> In the <i>Commit Comment Needed</i> dialog box, provide 
@@ -46,10 +73,21 @@ Committing</H1>
   </li>
 </ol>
 
+<P CLASS="Intro"><b>Tip:</b> You can commit files that are in conflict by performing
+an <b>Override and Commit</b>. This will commit the workbench copy of the resource
+into the repository and thus remove any of the incomming changes.
+</p>
+
+<P CLASS="Intro"><b>Warning:</b> The behavior of the <b>Override and Commit</b> command
+described above only applies to the outgoing mode of the Synchronize view. In the 
+<b>incoming/outgoing mode</b> of the view, the behavior for outgoing changes and conflicts is the same but 
+the command will revert incoming changes to whatever the local workbench contents are. 
+Exercise great caution if using this command in incoming/outgoing mode.
+</p>
 
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
-<a href="../concepts/concepts-27c.htm">Repositories</a><br>
+<a href="../concepts/concepts-27c.htm">CVS Repositories</a><br>
 <a href="../concepts/concepts-27b.htm">Branches</a><br>
 <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
 </p>
@@ -59,6 +97,11 @@ Committing</H1>
 <a href="tasks-113b.htm">Resolving conflicts</a><br>
 <a href="tasks-68.htm">Comparing resources</a><br>
 <a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-47.htm">CVS</a>
+<br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
 </p>
 
 <p>&nbsp;<br>
