*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_actionDef.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_actionDef.htm
@@ -58,7 +58,8 @@ associates its action with the definition.</p>
 <h4>Associating an action with an action definition</h4>
 
 
-<p>Actions can be associated with an action definition in code or in the <b>plugin.xml</b>.&nbsp;
+<p>Actions can be associated with an action definition in code or in the <b>plugin.xml
+</b>for action sets..&nbsp;
 Your choice depends on where the action is defined.</p>
 
 
@@ -92,7 +93,7 @@ shows the following:</p>
 they are easily referenced in code.&nbsp; </p>
 
 
-<p>What if you don't instantiate your action in code?&nbsp; If you define an
+<p> If you define an
 action in an action set, then you typically do not need to
 instantiate it yourself.&nbsp; The workbench will do it for you when the user
 invokes your action from a menu or the keyboard.&nbsp; In this case, you can
