--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget_contribute_actionsets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget_contribute_actionsets.htm
@@ -106,7 +106,7 @@ retargetable actions:</p>
 		IReadmeConstants.ACTION_SET_LABELRETARGET5, 
 		action);  
 }</font></pre>
-<p>We should see the relabeled action when the content outliner is active.</p>
+<p>We should see its relabeled action when the content outliner is active.</p>
 <p><img border="0" src="images/actionsetoutlineretargets.jpg" width="502" height="92"></p>
 <h4>&nbsp;</h4>
 
