*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_breakpoints.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_breakpoints.htm
@@ -12,15 +12,15 @@
 <h3>Breakpoints </h3>
 <p>Breakpoints allow users to suspend the execution of a program at a particular
 location.&nbsp; Breakpoints are typically shown in the UI along with the source
-code.&nbsp; You can add an <a href="../reference/api/org/eclipse/debug/core/IBreakpointListener"><b>IBreakpointListener</b></a>
-to an <a href="../reference/api/org/eclipse/debug/core/IBreakpointManager"><b>IBreakpointManager</b></a>
+code.&nbsp; You can add an <a href="../reference/api/org/eclipse/debug/core/IBreakpointListener.html"><b>IBreakpointListener</b></a>
+to an <a href="../reference/api/org/eclipse/debug/core/IBreakpointManager.html"><b>IBreakpointManager</b></a>
 in order to be notified as breakpoints are added and removed.&nbsp; When a
 breakpoint is encountered during execution of a program, the program suspends
 and triggers a <b>SUSPEND</b> debug event with <b>BREAKPOINT</b> as the
 reason.&nbsp; </p>
 <p>Plug-ins that define their own debug models and launch configurations often
 need to define their own breakpoint types.&nbsp; You can implement breakpoints
-for your particular debug model by defining a class that implements <a href="../reference/api/org/eclipse.debug/core/model/IBreakpoint.html"><b>IBreakpoint</b></a>.&nbsp;
+for your particular debug model by defining a class that implements <a href="../reference/api/org/eclipse/debug/core/model/IBreakpoint.html"><b>IBreakpoint</b></a>.&nbsp;
 </p>
 <p>Breakpoints are implemented using <a href="resAdv_markers.htm">resource
 markers</a>.&nbsp; Recall that resource markers allow you to associate meta
@@ -30,7 +30,7 @@ existing marker function such as persistence, searching, adding, and deleting.</
 <p>Why is it important to know about markers when using breakpoints?&nbsp; When
 you create a breakpoint type, you must also specify an associated marker
 type.&nbsp; Every extension of <a href="../reference/extension-points/org_eclipse_debug_core_breakpoints.html"><b>org.eclipse.debug.core.breakpoints</b></a>
-should be accompanied by an extension of <a href="../reference/extension-points/org_eclipse_resources_markers.html"><b>org.eclipse.resources.markers</b></a>.&nbsp;
+should be accompanied by an extension of <a href="../reference/extension-points/org_eclipse_core_resources_markers.html"><b>org.eclipse.core.resources.markers</b></a>.&nbsp;
 This is best demonstrated by looking at the extensions defined by the Java
 tooling for Java breakpoints.</p>
 <pre><font color="#4444CC">&lt;extension id=&quot;javaBreakpointMarker&quot; point=&quot;org.eclipse.core.resources.markers&quot;&gt;
