--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_adding.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_adding.htm
@@ -13,7 +13,7 @@
 <p>Your plug-in can add launch configuration types to the platform using the <a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_types.html"><b>org.eclipse.debug.core.launchConfigurationTypes</b></a>
 extension point.&nbsp; This extension point allows you to declare a
 configuration type using a unique id.&nbsp; You must provide a corresponding
-implementation of <a href="../reference/api/org/eclipse/debug/core/ILaunchConfigurationDelegate.html"><b>ILaunchConfigurationDelegate</b></a>
+implementation of <a href="../reference/api/org/eclipse/debug/core/model/ILaunchConfigurationDelegate.html"><b>ILaunchConfigurationDelegate</b></a>
 in your plug-in.&nbsp; You can also specify which modes (run, debug) are
 supported by your launcher and a name that should be used when showing launchers
 of this type to the user.</p>
@@ -31,7 +31,7 @@ configuration for launching local Java programs:</p>
 <p>For each type of launch configuration that supports debug mode, it is
 important to define a way to find the source code that corresponds with the
 current execution point in the code.&nbsp; <a href="../reference/api/org/eclipse/debug/core/model/ISourceLocator.html"><b>ISourceLocator</b></a>
-and <a href="../reference/api/org/eclipse/debug/core/model/IPersistableSourceLocator.htmll"><b>IPersistableSourceLocator</b></a>
+and <a href="../reference/api/org/eclipse/debug/core/model/IPersistableSourceLocator.html"><b>IPersistableSourceLocator</b></a>
 define an interface for mapping from an executing program back to the source
 code. </p>
 <p>Source locators are typically implemented to work with a corresponding launch
@@ -42,7 +42,7 @@ attribute of the launch configuration to an id of a source locator.&nbsp; When a
 launch configuration is read from disk, the id of the source locator must be
 mapped back to the implementation class.&nbsp; This is achieved using the <a href="../reference/extension-points/org_eclipse_debug_core_source_locators.html"><b>org.eclipse.debug.core.sourceLocators</b></a>
 extension point.&nbsp;</p>
-<p>The extension point allows you to register your class that implements <a href="../reference/api/org/eclipse/debug/core/model/IPersistableSourceLocator.htmll"><b>IPersistableSourceLocator</b></a>
+<p>The extension point allows you to register your class that implements <a href="../reference/api/org/eclipse/debug/core/model/IPersistableSourceLocator.html"><b>IPersistableSourceLocator</b></a>
 and associate it with an id that will be stored with the launch
 configuration.&nbsp; This allows the debug plug-in to look up source locator
 classes by id when it's time to instantiate a launch configuration.</p>
