--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_status.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_status.htm
@@ -30,7 +30,7 @@ invoke it.&nbsp; The extension merely provides a registry so that the status
 handlers can be found for particular status codes.&nbsp; Clients find status
 handlers by querying the <a href="../reference/api/org/eclipse/debug/core/DebugPlugin.html"><b>DebugPlugin</b></a>.</p>
 <pre><font color="#4444CC"><font SIZE="2">IStatusHandler</font><font SIZE="2"> handler = DebugPlugin.getDefault().getStatusHandler(status);</font></font></pre>
-<p>Status handlers should implement <a href="../reference/api/org/eclipse/debug/core/IStatus"><b>IStatusHandler</b></a>.&nbsp;
+<p>Status handlers should implement <a href="../reference/api/org/eclipse/debug/core/IStatusHandler.html"><b>IStatusHandler</b></a>.&nbsp;
 The status handling class is specified in the extension definition, along with
 its associated status code and the plug-in that is expected to generate the
 status codes.</p>
