--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_ui.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_ui.htm
@@ -21,7 +21,7 @@ tab group for local java applications is shown below.</p>
 extension point.&nbsp;&nbsp;&nbsp; The markup for this extension is
 straightforward. You associate the id of a configuration type (contributed using
 <a href="../reference/extension-points/org_eclipse_debug_core_launch_configuration_types.html"><b>org.eclipse.debug.core.launchConfigurationTypes</b></a>)
-with a class that implements <a href="http://../reference/api/org/eclipse/debug/ui/ILaunchConfigurationTabGroup.html"><b>ILaunchConfigurationTabGroup</b></a>.&nbsp;
+with a class that implements <a href="../reference/api/org/eclipse/debug/ui/ILaunchConfigurationTabGroup.html"><b>ILaunchConfigurationTabGroup</b></a>.&nbsp;
 The Java application tab group is contributed like this:</p>
 <pre><font color="#4444CC">&lt;extension point = &quot;org.eclipse.debug.ui.launchConfigurationTabGroups&quot;&gt;
 	&lt;launchConfigurationTabGroup
@@ -32,7 +32,7 @@ The Java application tab group is contributed like this:</p>
 &lt;/extension&gt;</font></pre>
 <p>Your tab group class is responsible for creating the necessary tabs and
 displaying and saving the relevant data from the launch configuration
-attributes.&nbsp; A tab that is common to all configurations, <a href="../reference/api/org/eclipse/ui/CommonTab.html"><b>CommonTab</b></a>,
+attributes.&nbsp; A tab that is common to all configurations, <a href="../reference/api/org/eclipse/debug/ui/CommonTab.html"><b>CommonTab</b></a>,
 is already implemented and can be created by any configuration.&nbsp; This tab
 manages the saving of the launch configuration as well as collecting common
 preferences.</p>
