--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uishortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uishortcuts.htm
@@ -15,7 +15,7 @@ shown in the run and/or debug menus.&nbsp; The <a href="../reference/extension-p
 extension point is used to register launch shortcuts.&nbsp; In the extension
 definition, you can specify in which modes (run, debug) and in which
 perspectives the shortcuts are shown.&nbsp; For each shortcut, you must specify
-an implementation of <a href="../reference/api/org/eclipse/debug/ui/ILaunchShortcut"><b>ILaunchShortcut</b></a>.&nbsp;
+an implementation of <a href="../reference/api/org/eclipse/debug/ui/ILaunchShortcut.html"><b>ILaunchShortcut</b></a>.&nbsp;
 This class is used to launch a program given a particular selection in a view or
 editor.</p>
 <p>The following markup registers shortcuts for launching a Java application:</p>
