--- a/bundles/org.eclipse.platform.doc.isv/guide/product_config.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_config.htm
@@ -68,7 +68,7 @@ proper entry for the directory structure shown above would be as follows:</p>
 <pre><font color="#4444CC">windowImage=acme.gif</font></pre>
 <h3>Welcome page</h3>
 <p>The description for the product's welcome page should be defined in an xml
-file in the format described in <a href="http://../reference/misc/welcome.html">Platform
+file in the format described in <a href="../reference/misc/welcome.html">Platform
 Welcome Page Configuration</a>.&nbsp; It is specified in the welcomePage
 attribute in the about.ini file. The path should be specified as a plug-in
 relative path.&nbsp; A proper entry for the directory structure shown above
@@ -77,7 +77,6 @@ would be as follows:</p>
 <p>You can also specify an national language lookup for the file.&nbsp; (See <a href="product_def_nl.htm">Locale
 specific files</a> for more detail.)</p>
 <pre><font color="#4444CC">welcomePage=$nl$/welcome.xml</font></pre>
-<p>&nbsp;</p>
 <h3>Splash screens</h3>
 <p>The product splash screen is supplied in a <b>splash.bmp</b> file located in
 the primary feature plug-in directory.&nbsp; The image should be supplied in
