--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_workingsets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_workingsets.htm
@@ -53,7 +53,7 @@ changes in the selected working set, it can add a listener for <b>CHANGE_WORKING
 <p>For many plug-ins, using <b><a href="../reference/api/org/eclipse/ui/IWorkingSetManager.html">IWorkingSetManager</a>
 </b>to provide resource filtering is sufficient.&nbsp; If your plug-in needs to
 define working sets differently, it can register a new type of working set using
-<b><a href="../reference/extension-points/org/eclipse/ui/workingSets.html">org.eclipse.ui.workingSets</a></b>.&nbsp;
+<b><a href="../reference/extension-points/org_eclipse_ui_workingSets.html">org.eclipse.ui.workingSets</a></b>.&nbsp;
 The Java tooling uses this feature to define a Java working set type.&nbsp;
 Working set types are shown when the user decides to add a working set.</p>
 
@@ -61,7 +61,8 @@ Working set types are shown when the user decides to add a working set.</p>
 <p><img border="0" src="images/workingSetTypes.jpg" width="438" height="431"></p>
 
 
-<p>See the <b><a href="../reference/extension-points/org/eclipse/ui/workingSets.html">org.eclipse.ui.workingSets</a>
+<p>See the
+<b><a href="../reference/extension-points/org_eclipse_ui_workingSets.html">org.eclipse.ui.workingSets</a>
 </b>extension point documentation for more detail.</p>
 
 
