--- a/bundles/org.eclipse.platform.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.platform.doc.isv/questions/index.html
@@ -21,7 +21,7 @@ Platform Questions Index</h1>
 <ul>
   <li><a href="../guide/arch.htm">What is an extension point?&nbsp; an
     extension?</a></li>
-  <li><a href="../reference/misc/rplugman.html">What is the formal definition
+  <li><a href="../reference/misc/plugin_manifest.html">What is the formal definition
     for the manifest file?</a></li>
   <li><a href="../guide/product_def_nl.htm">Where do I put translated files for
     NLS?</a></li>
@@ -110,8 +110,8 @@ Platform Questions Index</h1>
     feature so it will work with the update manager?</a></li>
   <li><a href="../reference/misc/welcome.jpg">How do I configure a custom
     welcome page?</a></li>
-  <li><a href="../reference/misc/eclipse_install.html">How do I install and
-    deploy components?</a></li>
+  <li><a href="../reference/misc/eclipse-install.html">How do I install an
+    Eclipse based product?</a></li>
 </ul>
 <a href="../hglegal.htm"><img SRC="../ngibmcpy.gif" BORDER=0 height=12 width=250></a>
 </body>
