--- a/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
@@ -17,13 +17,13 @@ builder.&nbsp; Plug-ins can define new builders that handle special resource
 types, such as source files for a particular programming language.&nbsp; Once an
 executable program is built with your plug-in's builder, how can you make sure
 that it gets invoked correctly?</p>
-<p>The <b><a href="http://../reference/api/org/eclipse/debug/core/packages.html"> org.eclipse.debug.core</a>
+<p>The <b><a href="../reference/api/org/eclipse/debug/core/package-summary.html"> org.eclipse.debug.core</a>
 </b> plug-in provides the API that allows a program to define a configuration
 for launching a program.&nbsp; The program can be launched for regular execution
 or in debug mode, depending on the capabilities of your plug-in.&nbsp; The
 Eclipse Java Development Tools (JDT) use the platform debug support to launch
 Java VM's and the Java debugger.&nbsp;&nbsp;</p>
-<p>The <b><a href="http://../reference/api/org/eclipse/debug/ui/packages.html"> org.eclipse.debug.ui</a></b> plug-in includes support for user configuration of
+<p>The <b><a href="../reference/api/org/eclipse/debug/ui/package-summary.html"> org.eclipse.debug.ui</a></b> plug-in includes support for user configuration of
 launch parameters and utility classes that ease the implementation of powerful debuggers.</p>
 <p>There are some shared concepts in launching and debugging programs that are
 implemented in the platform debug support.&nbsp; However, the best way to
