--- a/bundles/org.eclipse.platform.doc.isv/guide/resAdv_hooks.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resAdv_hooks.htm
@@ -40,7 +40,7 @@ these operations from
     moving or deleting files, folders, and projects.&nbsp;</P>
 
 <P >
-The team plug-in uses the <a href="../reference/extension-points/org_eclipse_core_resources_moveDeleteHook.html">org.eclipse.core.resources.moveDeleteHook</a>
+The team plug-in uses the <a href="../reference/extension-points/org_eclipse_core_resources_moveDeleteHook.html"><b>org.eclipse.core.resources.moveDeleteHook</b></a>
 extension point to register its hook:</P>
 
 <pre ><font color="#4444CC">&lt;extension point=&quot;org.eclipse.core.resources.moveDeleteHook&quot; id=&quot;MoveDeleteHook&quot;&gt;
@@ -49,7 +49,7 @@ extension point to register its hook:</P>
 </pre>
 
 <P >
-The supplied class must implement <a href="../reference/api/org/eclipse/core/resources/IMoveDeleteHook.html">IMoveDeleteHook</a>,
+The supplied class must implement <a href="../reference/api/org/eclipse/core/resources/team/IMoveDeleteHook.html"><b>IMoveDeleteHook</b></a>,
 which is called by the platform whenever a resource is moved or deleted.&nbsp;
 The team plug-in installs a move delete hook manager that can determine which
 team provider is managing a resource and invoke its specific hook.</P>
@@ -66,14 +66,14 @@ File modification validators</h3>
 
 <p>It's also possible that team repository providers will need to prevent or
 intervene in the editing or saving of a file.&nbsp; The team plug-in
-accomplishes this by using the extension point <a href="../reference/extension-points/org_eclipse_core_resources_moveDeleteHook.html">org.eclipse.core.resources.fileModificationValidator</a>
+accomplishes this by using the extension point <a href="../reference/extension-points/org_eclipse_core_resources_moveDeleteHook.html"><b>org.eclipse.core.resources.fileModificationValidator</b></a>
 to register a validator that is called whenever a resource is to be modified.</p>
 
 <pre ><font color="#4444CC">&lt;extension point=&quot;org.eclipse.core.resources.fileModificationValidator&quot; id=&quot;FileValidator&quot;&gt;
 	&lt;fileModificationValidator class=&quot;org.eclipse.team.internal.core.FileModificationValidatorManager&quot;/&gt;
 &lt;/extension&gt;</font></pre>
 
-<P >The supplied class must implement <a href="../reference/api/org/eclipse/core/resources/IFileModificationValidator.html">IFileModificationValidator</a>,
+<P >The supplied class must implement <a href="../reference/api/org/eclipse/core/resources/IFileModificationValidator.html"><b>IFileModificationValidator</b></a>,
 which is called by the platform whenever a resource is saved or
 opened.&nbsp;&nbsp; The team plug-in installs a file modification manager that
 can determine which team provider is managing a resource and invoke its specific
