*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/arch.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/arch.htm
@@ -46,7 +46,7 @@ how new tools can be added to the platform by building plug-ins that extend the
 system.</p>
 
 
-<p><img border="0" src="images/sdk-arch.jpg" width="692" height="442"></p>
+<p><img border="0" src="images/sdk-arch.jpg" width="692" height="442" alt=""></p>
 
 
     <p >&nbsp;</p>
