--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_actiongroups.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_actiongroups.htm
@@ -44,7 +44,7 @@ Java debugger:</p>
 &lt;/extension&gt;</font></pre>
 <p>Note that the name specified in the extension point is what appears in the
 preferences dialog.</p>
-<p><img border="0" src="images/debugactiongroups.jpg" width="606" height="532"></p>
+<p><img border="0" src="images/debugactiongroups.jpg" width="606" height="532" alt="Preferences dialog with debug action groups"></p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
 </HTML>
