--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch.htm
@@ -28,7 +28,7 @@ is launched, an <a href="../reference/api/org/eclipse/debug/core/ILaunch.html"><
 queried for information such as running processes, debug session information,
 and source code location.&nbsp; A launch knows the configuration that was used to create
 it.&nbsp; </p>
-<p><img border="0" src="images/launch.jpg" width="495" height="191"> </p>
+<p><img alt="" border="0" src="images/launch.jpg" width="495" height="191"> </p>
 <p>&nbsp; </p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
