--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_applications.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_applications.htm
@@ -42,7 +42,7 @@ workbench window's shell are passed to the
 When the user selects the action, the <b>SectionsDialog</b>
 is opened.</P>
 
-<img border="0" src="images/readmedialog.jpg" width="181" height="161">
+<img alt="" border="0" src="images/readmedialog.jpg" width="181" height="161">
 
 
 <P >
