--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_extensions.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_extensions.htm
@@ -19,7 +19,7 @@ The workbench defines extension points for wizards that create new resources, im
 selection dialog to display all the wizards that have been contributed for that particular extension point.&nbsp;
 The new wizard dialog is shown below.</P>
 <P >
-<img border="0" src="images/newwizardlist.jpg" width="500" height="500"></P>
+<img border="0" src="images/newwizardlist.jpg" width="500" height="500" alt="New wizard dialog with selection list"></P>
 <P >
 Your wizard takes control once it is selected in the list and the <b> Next</b> button is pressed. This is when your first page becomes visible.&nbsp;</P>
 
