--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_newWizards.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_newWizards.htm
@@ -46,7 +46,7 @@ assigned to the category.&nbsp;&nbsp; Its <b>name</b>, <b>icon</b>,
 and <b>description</b> all show up in the new wizard
 selection dialog shown below.</P>
 <P >
-<img border="0" src="images/newwizardlist.jpg" width="500" height="500"></P>
+<img border="0" src="images/newwizardlist.jpg" width="500" height="500" alt="New wizard selection dialog with readme entries"></P>
 <P >
 All of this appears based on the markup in the <b>plugin.xml
 </b>file.&nbsp; None of the plug-in code runs
@@ -181,7 +181,7 @@ In the case of the readme wizard, we are going to ask our page to handle the fin
 <P >
 The completed wizard looks like this:</P>
 <P >
-<img border="0" src="images/readmewizard.jpg" width="500" height="710"></P>
+<img border="0" src="images/readmewizard.jpg" width="500" height="710" alt="Readme file creation wizard page"></P>
 
 
 
