--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_ui.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_ui.htm
@@ -16,7 +16,7 @@ create instances of the different types of launch configurations that have been
 contributed by plug-ins.&nbsp; Each type of launch configuration defines a group
 of tabs that collect and display information about the configuration.&nbsp; The
 tab group for local java applications is shown below.</p>
-<p><img border="0" src="images/launchdialog.jpg" width="628" height="560"></p>
+<p><img alt="Launch configuration dialog with contributed tab groups" border="0" src="images/launchdialog.jpg" width="628" height="560" ></p>
 <p>The tabs are contributed using the <a href="../reference/extension-points/org_eclipse_debug_ui_launchConfigurationTabGroups.html"><b>org.eclipse.debug.ui.launchConfigurationTabGroups</b></a>
 extension point.&nbsp;&nbsp;&nbsp; The markup for this extension is
 straightforward. You associate the id of a configuration type (contributed using
@@ -36,7 +36,7 @@ attributes.&nbsp; A tab that is common to all configurations, <a href="../refere
 is already implemented and can be created by any configuration.&nbsp; This tab
 manages the saving of the launch configuration as well as collecting common
 preferences.</p>
-<p><img border="0" src="images/launchtabs.jpg" width="451" height="336"></p>
+<p><img alt="" border="0" src="images/launchtabs.jpg" width="451" height="336"></p>
 <p>&nbsp;</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 </BODY>
