--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards.htm
@@ -26,7 +26,7 @@ or an action set.&nbsp;</P>
 <P >
 A wizard is composed of several different underlying parts.&nbsp;</P>
 
-<img border="0" src="images/wiz_arch.jpg" width="507" height="273">
+<img alt="" border="0" src="images/wiz_arch.jpg" width="507" height="273">
 
 
 <p>
